# a3-platform

./: .env.example  Cargo.toml  README.md  agent.json
crates/a3-cli/: Cargo.toml  README.md
crates/a3-cli/src/: main.rs
crates/a3-manifest/: Cargo.toml  README.md
crates/a3-manifest/src/: error.rs  lib.rs  manifest.rs  provider.rs  tools.rs
crates/a3-runtime/: Cargo.toml  README.md
crates/a3-runtime/examples/: main.rs
crates/a3-runtime/src/: builder.rs  error.rs  lib.rs  runtime.rs  serve.rs
crates/a3-tools/: Cargo.toml
