[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
a3-manifest = { path = "crates/a3-manifest" }
a3-runtime = { path = "crates/a3-runtime" }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.44"
