[package]
name = "a3-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
a3-manifest.workspace = true
http = "1.4.0"
rig-core = { version = "0.36.0", features = ["rmcp"] }
rmcp = { version = "1.5.0", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
